# beeai-workshop

./: .gitignore  .markdownlint-cli2.yaml  .spellcheck-en-custom.txt  .spellcheck.yml  README.md  mkdocs.yml  pyproject.toml
beeai_fw_tavily_redis/: pyproject.toml
beeai_fw_tavily_redis/src/: agent.py  tavily_mcp_tool.py
beeai_fw_tavily_redis/src/solutions/: agent.py  tavily_mcp_tool.py
docs/: README.md
docs/Introduction_acp_beeai/lab-1/: README.md
docs/Introduction_acp_beeai/lab-2/: README.md
docs/Introduction_acp_beeai/lab-3/: README.md
docs/Introduction_acp_beeai/pre-work/: README.md
docs/Introduction_acp_beeai/uninstall_troubleshooting/: README.md
docs/beeai_fw__tavily_redis/agent/: README.md
docs/beeai_fw__tavily_redis/overview/: README.md
docs/beeai_fw__tavily_redis/pre-work/: README.md
docs/beeai_fw__tavily_redis/tools/: README.md
docs/introduction_beeai_framework/overview/: README.md
docs/introduction_beeai_platform/overview/: README.md
docs/introduction_beeai_platform/pre-work/: README.md
docs/introduction_beeai_platform/run/: README.md
docs/introduction_beeai_platform/setup/: README.md
docs/introduction_beeai_platform/uninstall_troubleshooting/: README.md
docs/kitchen-aide/: README.md
docs/middleware/: README.md
docs/opentech/agentstack/overview/: README.md
docs/opentech/agentstack/pre-work/: README.md
docs/opentech/agentstack/run/: README.md
docs/opentech/agentstack/setup/: README.md
docs/opentech/agentstack/uninstall_troubleshooting/: README.md
docs/opentech/beeaiframework/lab-1/: README.md
docs/opentech/beeaiframework/overview/: README.md
docs/opentech/beeaiframework/prework/: README.md
docs/opentech/docling/lab-1/: README.md
docs/opentech/docling/lab-2/: README.md
docs/opentech/llm/lab-1.5/: README.md
docs/opentech/overview/: README.md
docs/opentech/prework/: README.md
intro_acp_beeai/src/: ticket_triage_agent.py  ticket_workflow_agent.py
intro_beeai_framework/: README.md  beeai_framework_workshop_conference_agent.ipynb  env.template  pyproject.toml
intro_beeai_framework/src/: agent.py
intro_beeai_platform/: README.md  env.template  pyproject.toml
intro_beeai_platform/src/: agent.py
kitchen-aide/: beeai_kitchen_aide.ipynb
kitchen-aide/kitchen-contents/: freezer_contents.md  fridge_contents.md  my_recipes.md  pantry_contents.md
middleware/: beeai_middleware.ipynb
opentech/: wikipedia.txt
opentech/agentstack/: pyproject.toml
opentech/agentstack/src/: agent.py
opentech/beeaiframework/: README.md  pyproject.toml
opentech/beeaiframework/notebooks/: beeai.ipynb  beeai_framework_workshop_conference_agent.ipynb
opentech/docling/: pyproject.toml
opentech/docling/notebooks/: Chunking.ipynb  Conversion.ipynb
opentech/mellea/: pyproject.toml
src/: helpers.py  ticket_response_agent.py  ticket_triage_agent.py  ticket_workflow_agent.py
(+16 files in other folders)
