[project]
name = "intro_beeai_framework"
version = "0.1.0"
description = "Introduction to BeeAI workshop"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "arize-phoenix==11.37.0",
    "langchain-community==0.3.27",
    "openinference-instrumentation-beeai==0.1.11",
    "beeai-framework[a2a,duckduckgo,llama_index,wikipedia]==0.1.51",
    "beeai-sdk==0.3.4",
    "python-dotenv~=1.1.1",
    "pydantic-ai~=0.7.6",
    "markdown==3.9",
    "unstructured==0.18.15",
]
