[project]
name = "intro_beeai_framework"
version = "0.1.0"
description = "Introduction to BeeAI workshop"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "arize-phoenix==11.37.0",
    "s3fs",
    "fsspec==2025.3.0",
    "gcsfs",
    "nest_asyncio",
    "jedi",
    "opentelemetry-api==1.37.0",
    "opentelemetry-sdk==1.37.0",
    "openinference-instrumentation-beeai==0.1.13",
    "beeai-framework[duckduckgo,llama_index,wikipedia]==0.1.59",
    "langchain",
    "langchain-community==0.3.27",
    "python-dotenv~=1.1.1",
    "markdown==3.9",
    "wikipedia",
    "unstructured==0.18.15",
    "requests==2.32.4"
]
