[project]
name = "beeai_docling_mellea"
version = "0.1.0"
description = "Open Source Agentic AI Workshop"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "arize-phoenix==11.37.0",
    "langchain-community==0.3.27",
    "openinference-instrumentation-beeai==0.1.11",
    "beeai-framework[a2a,duckduckgo,llama_index,wikipedia]==0.1.67",
    "agentstack-sdk==0.4.1",
    "python-dotenv~=1.1.1",
    "pydantic-ai~=0.7.6",
    "markdown==3.9",
    "unstructured==0.18.15",
    "docling",
    "matplotlib",
    "pillow",
    "pandas",
]
